--- a/index.html
+++ b/index.html
@@ -222,29 +222,12 @@
     <div class="container text-center mx-auto">
       <h2 class="text-4xl font-bold">Contact</h2>
       <div class="w-full md:w-2/3 mx-auto bg-purple-500 p-4 rounded shadow-md text-left">
-        <div class="flex flex-wrap">
-          <div class="mb-3 sm:mr-2 pt-0 flex-auto sm:flex-1">
-            <label class="text-lg inline-block mb-2 text-white">Name:</label>
-            <input type="text" placeholder="Name" id="contactName"
-              class="px-3 py-3 placeholder-gray-500 text-gray-900 bg-white rounded text-md shadow outline-none focus:outline-none focus:shadow-outline w-full" />
-          </div>
-          <div class="mb-3 sm:ml-2 pt-0 flex-auto sm:flex-1">
-            <label class="text-lg inline-block mb-2 text-white">Email:</label>
-            <input type="email" placeholder="Email" id="contactEmail"
-              class="px-3 py-3 placeholder-gray-500 text-gray-900 bg-white rounded text-md shadow outline-none focus:outline-none focus:shadow-outline w-full" />
-          </div>
-        </div>
-        <div class="mb-3 pt-0">
-          <label class="text-lg inline-block mb-2 text-white">Message:</label>
-          <textarea placeholder="Message" id="contactMessage"
-            class="px-3 py-3 placeholder-gray-500 text-gray-900 bg-white rounded text-md shadow outline-none focus:outline-none focus:shadow-outline w-full"></textarea>
-        </div>
-        <button
+        <a href="mailto:youssefbashafcis@gmail.com"
           class="block w-full bg-purple-700 text-white active:bg-purple-600 font-bold uppercase text-sm px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mb-1"
-          type="button" style="transition: all 0.15s ease">
+          type="button" style="transition: all 0.15s ease" id="contactSubmit">
           Send Email
           <i class="ml-2 fas fa-paper-plane"></i>
-        </button>
+        </a>
       </div>
     </div>
   </section>
@@ -259,23 +242,27 @@
       </p>
       <ul class="flex text-white text-xl mx-auto md:mr-0">
         <li>
-          <a class="w-10 h-10 flex mx-2 items-center justify-center border border-white rounded-full" href="#">
+          <a href="https://twitter.com/YoussefPasha8"
+            class="w-10 h-10 flex mx-2 items-center justify-center border border-white rounded-full" href="#">
             <i class="fab fa-twitter"></i>
           </a>
         </li>
         <li>
-          <a class="w-10 h-10 flex mx-2 items-center justify-center border border-white rounded-full" href="#">
+          <a href="https://www.facebook.com/PashaMessages"
+            class="w-10 h-10 flex mx-2 items-center justify-center border border-white rounded-full" href="#">
             <i class="fab fa-facebook"></i>
           </a>
         </li>
         <li>
-          <a class="w-10 h-10 flex mx-2 items-center justify-center border border-white rounded-full" href="#">
+          <a href="https://www.instagram.com/youssefpasha_/"
+            class="w-10 h-10 flex mx-2 items-center justify-center border border-white rounded-full" href="#">
             <i class="fab fa-instagram"></i>
           </a>
         </li>
         <li>
-          <a class="w-10 h-10 flex mx-2 items-center justify-center border border-white rounded-full" href="#">
-            <i class="fab fa-youtube"></i>
+          <a href="https://github.com/YoussefPasha"
+            class="w-10 h-10 flex mx-2 items-center justify-center border border-white rounded-full" href="#">
+            <i class="fab fa-github"></i>
           </a>
         </li>
       </ul>
